# mockyard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: api.rs  generator.rs  lib.rs  main.rs  schema.rs
static/: docs.html  index.html  openapi.yaml
tests/: api_test.rs
