[package]
name = "mockyard"
version = "0.1.0"
edition = "2024"
description = "A fast, self-hostable mock data generator"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
fake = { version = "3", features = ["derive", "chrono"] }
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
